# asap-modules

./: .buildinfo  .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  MaterializeSections_test.json  README.md  README.rst  auto_pt_match_optimization.txt  copy_rough_align_point_matches_from_one_col_to_another.ipynb  docker_setup.sh  docs_requirements.txt  downsample_stack.json  downsample_zs.txt  entrypoint.sh  ex_apply.json  ex_apply_mipmaps.json  ex_apply_rough.json  ex_create_fine_tilepairs.json  ex_create_tilepairs.json  ex_fusion.json  ex_generate_mipmaps.json  ex_make_montage_scape_stack.json  ex_montage_qc.json  ex_montage_scapes.json  ex_montage_solve_poly.json  ex_montage_solve_py.json  ex_old_lc.json  ex_remap_z.json  ex_rough_qc.json  ex_rough_solver_affine_py.json  ex_rough_solver_py.json  ex_rough_solver_rigid_py.json  ex_rough_solver_tps_py.json  ex_rough_tilepairs.json  ex_swap_pt_matches.json  ex_swap_zs.json  (+48 more)
.circleci/: config.yml
_modules/: index.html
_modules/argschema/: schemas.html
_static/: theme_overides.css
docs/: Makefile  README.rst  conf.py  includeme.rst  index.rst  make.bat
docs/asap/: asap.rst  (+14 more)
integration_tests/: consolidate_tests.py  first_integration_test.py  lens_correction_tests.py  test_calc_lens_correction.py  test_consolidate.py  test_data.py  test_data_templating.py  test_dataimport.py  test_downsample_mask.py  test_em_montage.py  test_em_montage_qc.py  test_filter_pm.py  test_fusion.py  test_intensitycorrection.py  test_lens_correction.py  test_materialize.py  test_matlab_solver.py  test_mesh_lens_correction.py  test_multichan_multiplicative_correction.py  test_multiplicative_correction.py  test_pairwise_rough.py  test_point_match_optimization.py  test_pt_match_opencv.py  test_pt_match_optimization.py  test_registration.py  test_render_module.py  test_rough_align.py  test_rough_align_matlab.py  test_rough_align_qc.py  test_solver.py  test_swapping.py
rendermodules/: __init__.py  modules.html  rendermodules.dataimport.html  rendermodules.html  rendermodules.lens_correction.html  rendermodules.module.html
scripts/: conda_env_setup.py
test-reports/: test.xml
tests/: first_test.py  test_calc_lens_correction.py  test_materialization.py  test_module.py  test_template_module.py  tests_test_data.py
(+619 files in other folders)
